--- a/Paper/attempt2.tex
+++ b/Paper/attempt2.tex
@@ -32,12 +32,12 @@ From the field's very early early days of inception, AI researchers would theori
 This is perhaps unreasonable, given the extreme breakthroughs that we have had the chance to experience within the field during the last decade. The purpose of this paper is to adopt a fresh view at the recurring issue of AGI, bringing recent technical advancements at the forefront of the discussion. The focal point will be neural architectures of computation, and a comparison between the paradigms of supervised and unsupervised learning. Unsupervised techniques will be promoted as a stronger, more promising alternative to their supervised counterparts. Motivating reasons for this position will be discussed in the sections to follow.
 
 \subsection{Background}\label{subsec:Background}
-Machine Learning has been by far the most striking breakthrough in AI for the last couple of decades. New benchmarks, some well above human-level performance \toref , are set on various kinds of tasks ranging from language understanding to game playing on a monthly basis. Although these have garnered quite a lot of attention, most of the focus has remained on the tasks and applications themselves, with few ongoing discussions on whether this marks the beginning of a new (potential) path towards AGI. This, of course, begs the question of why this is the case, especially considering the extreme enthusiasm that used to emanate from the field during its first few decades, despite the disproportionally faster pace of recent progress. To put it plainly, why are people not excited?
+Machine Learning has been by far the most striking breakthrough in AI for the last couple of decades. New benchmarks, some well above human-level performance , are set on various kinds of tasks ranging from language understanding to game playing on a monthly basis. Although these have garnered quite a lot of attention, most of the focus has remained on the tasks and applications themselves, with few ongoing discussions on whether this marks the beginning of a new (potential) path towards AGI. This, of course, begs the question of why this is the case, especially considering the extreme enthusiasm that used to emanate from the field during its first few decades, despite the disproportionally faster pace of recent progress. To put it plainly, why are people not excited?
 
 The most obvious reason would be that, nowadays, people are not as easily convinced as they were, while scientists are far less eager to start spouting grandiose promises. History has shown that you can not really predict the future (at least within AI research), and there seems to be a repeating pattern of hype followed by stagnation. In that sense, might it be the case that we have finally learned our lesson on how to remain calm and laid back in the face of astounding progress?
 I doubt this is the case; what is happening, rather, is that the kind of progress we are currently experiencing is on the a side of AI that is more in line with practical applications and results rather than actual intelligence.
 
-When people hear of machine learning, the thing that instantly comes to mind is supervised learning. Supervised learning, in a sentence, uses a set of labeled data pairs $S: \{ (a_i, b_i) \in A \otimes B \}$ to approximate an underlying generator function $f: A \rightarrow B$. While it's true that supervised learning has been spearheading machine learning, with most of the popular success stories coming that way (with a few triumphant exceptions \toref ), supervised learning is almost wholly engineering. It gives no answer to any question (and in fact does not even attempt to); when presenting a problem to a supervised system, it will yield back a solution, but not the actual process of solving it; it is truly one of the most efficient ways of crunching data, but at the end of the day it's just that. It offers little in terms of scalability; while we might improve upon our machinery, or come up with a more stable training algorithm, or enhance the representational efficiency using neat tricks, the paradigm will always be the same: you find some labeled data, you throw them to your network and then it works (or doesn't). But that paradigm is extremely narrow and corresponds to only a very small subset of the problems out there in the world. And while it's true that you can sometimes manage to convert your problem to a nail when your only tool is a hammer, real intelligence requires adapting the solution to the problem and not the other way around.
+When people hear of machine learning, the thing that instantly comes to mind is supervised learning. Supervised learning, in a sentence, uses a set of labeled data pairs $S: \{ (a_i, b_i) \in A \otimes B \}$ to approximate an underlying generator function $f: A \rightarrow B$. While it's true that supervised learning has been spearheading machine learning, with most of the popular success stories coming that way (with a few triumphant exceptions), supervised learning is almost wholly engineering. It gives no answer to any question (and in fact does not even attempt to); when presenting a problem to a supervised system, it will yield back a solution, but not the actual process of solving it; it is truly one of the most efficient ways of crunching data, but at the end of the day it's just that. It offers little in terms of scalability; while we might improve upon our machinery, or come up with a more stable training algorithm, or enhance the representational efficiency using neat tricks, the paradigm will always be the same: you find some labeled data, you throw them to your network and then it works (or doesn't). But that paradigm is extremely narrow and corresponds to only a very small subset of the problems out there in the world. And while it's true that you can sometimes manage to convert your problem to a nail when your only tool is a hammer, real intelligence requires adapting the solution to the problem and not the other way around.
 
 This by no means is to imply that supervised learning as a whole is a failed effort; on the contrary it is a truly remarkable advancement, and the next section is invested in admiring why.
 
@@ -111,12 +111,12 @@ By definition, unsupervised learning requires no example output data, thus avoid
 \paragraph{Loss Function}
 Unsupervised learning can do away with the necessity of a predefined loss function in two ways. To begin with, constructing efficient representation schemes is task-independent and can be tied with a multitude of downstream tasks; in fact, so-called unsupervised pretraining used to be common practice in the last decade, and many specialized systems still rely on unsupervised representations \cite{DBLP:journals/jmlr/ErhanBCMVB10}. This already completely resolves the issue mentioned earlier; even if we are driven by many, time-varying 'loss functions', they can all still be accomodated by a unified, lower-level representation.
 
-At the same time, generative networks, a variation of unsupervised systems that rely on sampling and approximate inference to perform variational reconstruction of some given input \toref , are actually capable of learning their own objective functions. Such architectures are the exemplar of the benefits to be gained by adopting unsupervised techniques. They are the digital equivalent of a brain that learns by analogy how to construct singular mental representations for objects belonging in the same category, and to even imagine new such objects by knowing which characteristics are its defining constants and which are the features that may vary. What is also astonishing is that a long-term change in the form of the input being provided would result in a gradual shift in the loss function being learned; is this not the kind of adaptability we would expect to see in an actually inteligent system?
+At the same time, generative networks, a variation of unsupervised systems that rely on sampling and approximate inference to perform variational reconstruction of some given input, are actually capable of learning their own objective functions \cite{goodfellow2014generative, kingma2013auto}. Such architectures are the exemplar of the benefits to be gained by adopting unsupervised techniques. They are the digital equivalent of a brain that learns by analogy how to construct singular mental representations for objects belonging in the same category, and to even imagine new such objects by knowing which characteristics are its defining constants and which are the features that may vary. What is also astonishing is that a long-term change in the form of the input being provided would result in a gradual shift in the loss function being learned; is this not the kind of adaptability we would expect to see in an actually inteligent system?
 
 \subsection{Breaking Boundaries}
 Unsupervised learning brings more to the table than just making up for supervised learning's shortcomings. 
 
-\paragraph{Learning Examples vs. Learning from Examples} A common point of doubt against machine learning has been the nature of learning performed. I would like to argue that unsupervised learning nullifies this doubt, at least to an extend. First off, it has been pointed out that unsupervised learning requires no labeled data; yet it may still benefit from it, in a way that is completely congruent with human learning. A toddler does not need to inspect a thousand pictures of a cat, each time being reminded "\textit{this is a cat!}", before inferring what constitutes a cat. Similarly, an unsupervised system is able to distinguish between categories by simply being shown manσy unlabeled instances of them (serving as the basis for structural separation) and a few labeled ones (allowing the already distinct classes to be identified with a name) \toref . In that way, part of the weight of learning has been moved from the specific examples themselves to the learner and its environment.
+\paragraph{Learning Examples vs. Learning from Examples} A common point of doubt against machine learning has been the nature of learning performed. I would like to argue that unsupervised learning nullifies this doubt, at least to an extend. First off, it has been pointed out that unsupervised learning requires no labeled data; yet it may still benefit from it, in a way that is completely congruent with human learning. A toddler does not need to inspect a thousand pictures of a cat, each time being reminded "\textit{this is a cat!}", before inferring what constitutes a cat. Similarly, an unsupervised system is able to distinguish between categories by simply being shown manσy unlabeled instances of them (serving as the basis for structural separation) and a few labeled ones (allowing the already distinct classes to be identified with a name) \cite{Fei-Fei:2006:OLO:1115692.1115783}. In that way, part of the weight of learning has been moved from the specific examples themselves to the learner and its environment.
 
 \paragraph{Imagination and Creativity} Human intelligence is not bound to knowledge transfer; we may inspect our environment and learn from examples, but we also generate new knowledge by performing leaps of intuition. These leaps require, if at least momentarily, breaking constraints set by past knowledge, sometimes using current information; they are a product of our creative ability and our imagination. There is a lack of consensus on where creativity originates from; but approximate bayesian inference, as used in unsupervised systems, is the most suitable applicable theory for modeling it. Let's use our ability of imagination to consider that, just like bayesian networks, a  probability distribution function describes the generative process of our thoughts and ideas, with most of the probability mass at each junction point being directed towards conventional world theories, guided by our past observations and knowledge. Such a system would warrant that our thought patterns usually do not stray too far into uncharted territory, as this would equate following a chain of improbable junctions; yet, every once in a while, following unlikely paths leads to new equilibria or optimal points, forcing a redistribution of the probability mass and reshaping our world views.
 
